--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.modelmapper:modelmapper:2.1.1'
+	implementation 'org.aspectj:aspectjrt:1.9.8'
+	implementation 'org.aspectj:aspectjweaver:1.9.8'
 }
 
 tasks.named('test') {
